# rescreener

./: .env  .gitignore  .pylintrc  README.md  SETUP.md  pyproject.toml
docs/: llm.md
documents/: nlp.md
rescreener/: config.py  main.py
rescreener/api/: routes.py
rescreener/utils/: definitions.py  file_utils.py  path_utils.py  pdf_utils.py  pyproject.py  pyproject_utils.py
templates/: index.html
tests/: test_config.py  test_main.py
tests/api/: test_routes.py
tests/utils/: create_files_fixture.py  create_pdf_fixture.py  test_definitions.py  test_file_utils.py  test_path_utils.py  test_pdf_utils.py  test_pyproject.py  test_pyproject_utils.py  test_routes.py
