[project]
name = "rescreener"
version = "0.1.0"
keywords = ["AI", "ML", "NLP", "LLM"]
description = "AI-Powered Resume Screener (Classification + NLP + LLM)"
authors = [
    { name = "Rubens Gomes", email = "rubens.s.gomes@gmail.com" }
]
license = "Apache License Version 2.0"
readme = "README.md"
documentation = "https://github.com/rubensgomes/rescreener/docs/"
repository = "https://github.com/rubensgomes/rescreener/"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi (>=0.115.14)",
    "PyPDF2 (>=3.0.1)",
    "spacy (>=3.8.7,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aiofiles (>=24.1.0,<25.0.0)"
]

[tool.poetry]
name = "rescreener"
packages = [
    { include = "rescreener" }
]

[tool.poetry.group.dev.dependencies]
coverage = "^7.9.1"
pytest = "^8.4.1"
pytest-mock = "^3.14.1"
fpdf = "^1.7.2"
pytest-asyncio = "^1.0.0"
# do not use 0.28 as it causes unit test to fail.
httpx = "0.27.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

